--- a/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/explicitlyorderedpostbuildtest_vs2019_win64.vcxproj
+++ b/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/explicitlyorderedpostbuildtest_vs2019_win64.vcxproj
@@ -33,7 +33,7 @@
     <ProjectName>ExplicitlyOrderedPostBuildTest</ProjectName>
   </PropertyGroup>
   <PropertyGroup Label="Globals">
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_FastBuild_NoBlob_vs2019|x64'" Label="Configuration">
@@ -89,9 +89,9 @@
     <OutDir>output\debug_fastbuild_noblob_vs2019\</OutDir>
     <IntDir>build\debug_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe ExplicitlyOrderedPostBuildTest_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" ExplicitlyOrderedPostBuildTest_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe -clean ExplicitlyOrderedPostBuildTest_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean ExplicitlyOrderedPostBuildTest_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "build\debug_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest\*unity*.cpp" >NUL 2>NUL
 del "build\debug_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest\*.obj" >NUL 2>NUL
 del "build\debug_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest\*.a" >NUL 2>NUL
@@ -110,9 +110,9 @@ del "output\debug_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest.pdb" >N
     <OutDir>output\debug_fastbuild_vs2019\</OutDir>
     <IntDir>build\debug_fastbuild_vs2019\explicitlyorderedpostbuildtest\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe ExplicitlyOrderedPostBuildTest_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" ExplicitlyOrderedPostBuildTest_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe -clean ExplicitlyOrderedPostBuildTest_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean ExplicitlyOrderedPostBuildTest_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "build\debug_fastbuild_vs2019\explicitlyorderedpostbuildtest\*unity*.cpp" >NUL 2>NUL
 del "build\debug_fastbuild_vs2019\explicitlyorderedpostbuildtest\*.obj" >NUL 2>NUL
 del "build\debug_fastbuild_vs2019\explicitlyorderedpostbuildtest\*.a" >NUL 2>NUL
@@ -142,9 +142,9 @@ del "output\debug_fastbuild_vs2019\explicitlyorderedpostbuildtest.pdb" >NUL 2>NU
     <OutDir>output\release_fastbuild_noblob_vs2019\</OutDir>
     <IntDir>build\release_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe ExplicitlyOrderedPostBuildTest_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" ExplicitlyOrderedPostBuildTest_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe -clean ExplicitlyOrderedPostBuildTest_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean ExplicitlyOrderedPostBuildTest_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "build\release_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest\*unity*.cpp" >NUL 2>NUL
 del "build\release_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest\*.obj" >NUL 2>NUL
 del "build\release_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest\*.a" >NUL 2>NUL
@@ -163,9 +163,9 @@ del "output\release_fastbuild_noblob_vs2019\explicitlyorderedpostbuildtest.pdb" 
     <OutDir>output\release_fastbuild_vs2019\</OutDir>
     <IntDir>build\release_fastbuild_vs2019\explicitlyorderedpostbuildtest\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe ExplicitlyOrderedPostBuildTest_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" ExplicitlyOrderedPostBuildTest_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe -clean ExplicitlyOrderedPostBuildTest_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean ExplicitlyOrderedPostBuildTest_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "build\release_fastbuild_vs2019\explicitlyorderedpostbuildtest\*unity*.cpp" >NUL 2>NUL
 del "build\release_fastbuild_vs2019\explicitlyorderedpostbuildtest\*.obj" >NUL 2>NUL
 del "build\release_fastbuild_vs2019\explicitlyorderedpostbuildtest\*.a" >NUL 2>NUL
