--- a/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/postbuildtestexecution_vs2019_win64.vcxproj
+++ b/Sharpmake.FunctionalTests/FastBuildFunctionalTest/reference/projects/postbuildtestexecution_vs2019_win64.vcxproj
@@ -33,7 +33,7 @@
     <ProjectName>PostBuildTestExecution</ProjectName>
   </PropertyGroup>
   <PropertyGroup Label="Globals">
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_FastBuild_NoBlob_vs2019|x64'" Label="Configuration">
@@ -89,9 +89,9 @@
     <OutDir>output\debug_fastbuild_noblob_vs2019\</OutDir>
     <IntDir>build\debug_fastbuild_noblob_vs2019\postbuildtestexecution\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe PostBuildTestExecution_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" PostBuildTestExecution_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe -clean PostBuildTestExecution_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean PostBuildTestExecution_Debug_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "build\debug_fastbuild_noblob_vs2019\postbuildtestexecution\*unity*.cpp" >NUL 2>NUL
 del "build\debug_fastbuild_noblob_vs2019\postbuildtestexecution\*.obj" >NUL 2>NUL
 del "build\debug_fastbuild_noblob_vs2019\postbuildtestexecution\*.a" >NUL 2>NUL
@@ -110,9 +110,9 @@ del "output\debug_fastbuild_noblob_vs2019\postbuildtestexecution.pdb" >NUL 2>NUL
     <OutDir>output\debug_fastbuild_vs2019\</OutDir>
     <IntDir>build\debug_fastbuild_vs2019\postbuildtestexecution\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe PostBuildTestExecution_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" PostBuildTestExecution_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe -clean PostBuildTestExecution_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean PostBuildTestExecution_Debug_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "build\debug_fastbuild_vs2019\postbuildtestexecution\*unity*.cpp" >NUL 2>NUL
 del "build\debug_fastbuild_vs2019\postbuildtestexecution\*.obj" >NUL 2>NUL
 del "build\debug_fastbuild_vs2019\postbuildtestexecution\*.a" >NUL 2>NUL
@@ -142,9 +142,9 @@ del "output\debug_fastbuild_vs2019\postbuildtestexecution.pdb" >NUL 2>NUL</NMake
     <OutDir>output\release_fastbuild_noblob_vs2019\</OutDir>
     <IntDir>build\release_fastbuild_noblob_vs2019\postbuildtestexecution\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe PostBuildTestExecution_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" PostBuildTestExecution_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe -clean PostBuildTestExecution_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean PostBuildTestExecution_Release_FastBuild_NoBlob_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "build\release_fastbuild_noblob_vs2019\postbuildtestexecution\*unity*.cpp" >NUL 2>NUL
 del "build\release_fastbuild_noblob_vs2019\postbuildtestexecution\*.obj" >NUL 2>NUL
 del "build\release_fastbuild_noblob_vs2019\postbuildtestexecution\*.a" >NUL 2>NUL
@@ -163,9 +163,9 @@ del "output\release_fastbuild_noblob_vs2019\postbuildtestexecution.pdb" >NUL 2>N
     <OutDir>output\release_fastbuild_vs2019\</OutDir>
     <IntDir>build\release_fastbuild_vs2019\postbuildtestexecution\</IntDir>
     <NMakeBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe PostBuildTestExecution_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" PostBuildTestExecution_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeBuildCommandLine>
     <NMakeReBuildCommandLine>cd $(SolutionDir)
-$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe -clean PostBuildTestExecution_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
+"$(ProjectDir)..\..\..\tools\FastBuild\Windows-x64\FBuild.exe" -clean PostBuildTestExecution_Release_FastBuild_vs2019_win64 -ide -summary -wait -config $(SolutionName).bff </NMakeReBuildCommandLine>
     <NMakeCleanCommandLine>del "build\release_fastbuild_vs2019\postbuildtestexecution\*unity*.cpp" >NUL 2>NUL
 del "build\release_fastbuild_vs2019\postbuildtestexecution\*.obj" >NUL 2>NUL
 del "build\release_fastbuild_vs2019\postbuildtestexecution\*.a" >NUL 2>NUL
