--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -232,7 +232,14 @@ jobs:
           xcodebuild -workspace codebase/temp/solutions/HelloXCode_mac.xcworkspace -configuration ${{ matrix.configuration }} -scheme exe_mac
           cd codebase/temp/bin/mac_${{ matrix.configuration }}
           DYLD_LIBRARY_PATH=. ./exe
-
+          
+      - name: HelloAndroid ${{ matrix.configuration }}
+        if: runner.os == 'Windows'
+        working-directory: 'samples/HelloAndroid'
+        run: |
+          & $env:SHARPMAKE_EXE "/sources('HelloAndroid.main.sharpmake.cs')"
+          & $env:COMPILE_BATCH solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}" "arm64_v8"
+          & $env:COMPILE_BATCH solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}" "x86_64"
       - name: NetCore/DotNetCoreFrameworkHelloWorld ${{ matrix.configuration }}
         if: runner.os == 'Windows'
         working-directory: 'samples/NetCore/DotNetCoreFrameworkHelloWorld'
