--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -239,8 +239,9 @@ jobs:
         working-directory: 'samples/HelloAndroid'
         run: |
           & $env:SHARPMAKE_EXE "/sources('HelloAndroid.main.sharpmake.cs')"
-          & $env:COMPILE_BATCH solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}" "arm64_v8"
-          & $env:COMPILE_BATCH solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}" "x86_64"
+          & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.android-configuration }}" "arm64_v8"
+          & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.android-configuration }}" "x86_64"
+          
       - name: NetCore/DotNetCoreFrameworkHelloWorld ${{ matrix.configuration }}
         if: runner.os == 'Windows'
         working-directory: 'samples/NetCore/DotNetCoreFrameworkHelloWorld'
