--- a/samples/HelloAndroid/resources/build.xml
+++ b/samples/HelloAndroid/resources/build.xml
@@ -27,7 +27,7 @@
          get it from the ANDROID_HOME env var. -->
     <property environment="env" />
     <condition property="sdk.dir" value="${env.ANDROID_HOME}">
-        <isset property="env.ANDROID" />
+        <isset property="env.ANDROID_HOME" />
     </condition>
 
     <!-- The project.properties file contains project specific properties such as 
