--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -256,11 +256,7 @@ jobs:
         working-directory: 'samples/HelloAndroid'
         run: |
           & $env:SHARPMAKE_EXE "/sources('HelloAndroid.main.sharpmake.cs')"
-          cd codebase/temp/projects/exepackaging
-          ls
-          cd app
-          ls
-          & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "arm64_v8a"
+          & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "ARM64"
           & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "x86_64"
           
       - name: NetCore/DotNetCoreFrameworkHelloWorld ${{ matrix.configuration }}
