Testing: moved the definition of  the android builld tool version under HelloAndroid's job section

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -96,7 +96,6 @@ jobs:
     env:
       SHARPMAKE_EXE: ${{ github.workspace }}/tmp/bin/release/Sharpmake.Application.exe
       COMPILE_BATCH: ${{ github.workspace }}/CompileSharpmake.bat
-      REMOVE_ANDROID_BUILD_TOOLS_VERSION: 31.0.0
 
     steps:
       - name: Checkout the repo
@@ -254,6 +253,7 @@ jobs:
       - name: HelloAndroid ${{ matrix.configuration }}
         if: runner.os == 'Windows'
         working-directory: 'samples/HelloAndroid'
+        env: REMOVE_ANDROID_BUILD_TOOLS_VERSION: 31.0.0
         run: | #Installed Build Tools revision 31.0.0 is corrupted. Need to remove and install again using the SDK Manager.
           & $env:SHARPMAKE_EXE "/sources('HelloAndroid.main.sharpmake.cs')"
           & $env:ANDROID_HOME/tools/bin/sdkmanager --uninstall "build-tools;${{ env.REMOVE_ANDROID_BUILD_TOOLS_VERSION }}"
